// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`presses Close Banner button 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "elevation": 1,
            "marginBottom": 5,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 0.5,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 0.75,
          }
        }
        testID="banner"
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "maxWidth": 960,
                "overflow": "hidden",
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "height": 0,
              }
            }
          />
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 0,
                  "marginHorizontal": 8,
                  "marginTop": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "margin": 8,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontSize": 40,
                      },
                      Array [
                        Object {
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰓎
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                  ]
                }
              >
                Samples of all components
                <Button
                  title="Close"
                />
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "margin": 4,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`presses Close Banner button 2`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "elevation": 1,
            "marginBottom": 5,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 0.5,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 0.75,
          }
        }
        testID="banner"
      >
        <View
          style={
            Array [
              Object {
                "alignSelf": "center",
                "maxWidth": 960,
                "overflow": "hidden",
                "width": "100%",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "height": 0,
              }
            }
          />
          <View
            style={
              Object {
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transform": Array [
                  Object {
                    "translateY": -0,
                  },
                ],
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-start",
                  "marginBottom": 0,
                  "marginHorizontal": 8,
                  "marginTop": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "margin": 8,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontSize": 40,
                      },
                      Array [
                        Object {
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰓎
                </Text>
              </View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#000000",
                      "fontFamily": "System",
                      "fontWeight": "400",
                      "textAlign": "left",
                    },
                    Object {
                      "flex": 1,
                      "margin": 8,
                    },
                  ]
                }
              >
                Samples of all components
                <Button
                  title="Close"
                />
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "margin": 4,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
